tests/rosetta/out/Rust/atomic-updates.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/atomic-updates.rs:23:35
   |
23 |             buckets[i as usize] = v;
   |             -------------------   ^ expected `i32`, found `f64`
   |             |
   |             expected due to the type of this binding

error[E0277]: cannot subtract-assign `f64` from `{integer}`
  --> /tmp/atomic-updates.rs:24:18
   |
24 |             dist -= v;
   |                  ^^ no implementation for `{integer} -= f64`
   |
   = help: the trait `SubAssign<f64>` is not implemented for `{integer}`
   = help: the following other types implement trait `SubAssign<Rhs>`:
             `f128` implements `SubAssign<&f128>`
             `f128` implements `SubAssign`
             `f16` implements `SubAssign<&f16>`
             `f16` implements `SubAssign`
             `f32` implements `SubAssign<&f32>`
             `f32` implements `SubAssign`
             `f64` implements `SubAssign<&f64>`
             `f64` implements `SubAssign`
           and 24 others

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/atomic-updates.rs:42:63
   |
42 |                 let mut a = (((v1 - v2) as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                               ^^^^^ method not found in `f64`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/atomic-updates.rs:49:63
   |
49 |                 let mut a = (((v2 - v1) as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                               ^^^^^ method not found in `f64`

error[E0277]: cannot divide `f64` by `String`
  --> /tmp/atomic-updates.rs:78:261
   |
78 | ...), " "), tc1.to_string()), " "), (total as f64) / (nTicks as f64).to_string()), "  "), buckets.to_string()))].into_iter().filter(|s| !...
   |                                                    ^ no implementation for `f64 / String`
   |
   = help: the trait `Div<String>` is not implemented for `f64`
   = help: the following other types implement trait `Div<Rhs>`:
             `&f64` implements `Div<f64>`
             `&f64` implements `Div`
             `f64` implements `Div<&f64>`
             `f64` implements `Div`

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/atomic-updates.rs:78:308
   |
78 | ...64).to_string()), "  "), buckets.to_string()))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                     ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
